{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 323,
  "lineage": "c99a1463-c6ea-256a-c293-49f80dc8d3bb",
  "resources": [
    {
      "module": "module.app_servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:807021613609:instance/i-0f6fd7cf579eb81d0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6fd7cf579eb81d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstcloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079c3ec7e9fa95124",
            "private_dns": "ip-10-0-0-231.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.231",
            "public_dns": "ec2-13-43-218-169.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.218.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4b91f2ac9a40d4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06355f0e4751ec0a3",
            "tags": {
              "Name": "app_server_001"
            },
            "tags_all": {
              "Name": "app_server_001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049172db89af1f1a0"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:807021613609:instance/i-069f112552efee61d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069f112552efee61d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstcloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4e30a08576d5976",
            "private_dns": "ip-10-0-1-55.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-52-56-60-6.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.60.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8c31fdb80a141e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcbb940c939791c4",
            "tags": {
              "Name": "app_server_002"
            },
            "tags_all": {
              "Name": "app_server_002"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049172db89af1f1a0"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "first_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:loadbalancer/app/first-load-balancer/23b67fe630768348",
            "arn_suffix": "app/first-load-balancer/23b67fe630768348",
            "desync_mitigation_mode": "defensive",
            "dns_name": "first-load-balancer-535925701.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:loadbalancer/app/first-load-balancer/23b67fe630768348",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "first-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-049172db89af1f1a0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00870028a0a26b461"
              },
              {
                "subnet_id": "subnet-06355f0e4751ec0a3"
              },
              {
                "subnet_id": "subnet-0fcbb940c939791c4"
              }
            ],
            "subnets": [
              "subnet-00870028a0a26b461",
              "subnet-06355f0e4751ec0a3",
              "subnet-0fcbb940c939791c4"
            ],
            "vpc_id": "vpc-0cea82569154089e0",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "first_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:listener/app/first-load-balancer/23b67fe630768348/1a36143b4b761659",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:listener/app/first-load-balancer/23b67fe630768348/1a36143b4b761659",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:loadbalancer/app/first-load-balancer/23b67fe630768348",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.first_load_balancer",
            "module.load_balancing.aws_lb_target_group.first_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "first_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8",
            "arn_suffix": "targetgroup/first-target-group/5cfdf9e34e1607a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "first-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8-20231128105436835300000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8",
            "target_id": "i-0f6fd7cf579eb81d0"
          },
          "dependencies": [
            "module.app_servers.aws_instance.web_servers",
            "module.load_balancing.aws_lb_target_group.first_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8-20231128105436834900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:807021613609:targetgroup/first-target-group/5cfdf9e34e1607a8",
            "target_id": "i-069f112552efee61d"
          },
          "dependencies": [
            "module.app_servers.aws_instance.web_servers",
            "module.load_balancing.aws_lb_target_group.first_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:internet-gateway/igw-0e08faa0bdb848aad",
            "id": "igw-0e08faa0bdb848aad",
            "owner_id": "807021613609",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-igw"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e08faa0bdb848aad",
            "id": "r-rtb-0213f5d6a91a1b1bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0213f5d6a91a1b1bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:route-table/rtb-0213f5d6a91a1b1bc",
            "id": "rtb-0213f5d6a91a1b1bc",
            "owner_id": "807021613609",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e08faa0bdb848aad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1826730581d8c3",
            "route_table_id": "rtb-0213f5d6a91a1b1bc",
            "subnet_id": "subnet-06355f0e4751ec0a3"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01204319ea1636630",
            "route_table_id": "rtb-0213f5d6a91a1b1bc",
            "subnet_id": "subnet-0fcbb940c939791c4"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e625e899da579a7",
            "route_table_id": "rtb-0213f5d6a91a1b1bc",
            "subnet_id": "subnet-00870028a0a26b461"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-0f19846987d7d111c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f19846987d7d111c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-083648f7b24311b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083648f7b24311b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-0e8c96f6606f3459d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8c96f6606f3459d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-06355f0e4751ec0a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06355f0e4751ec0a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-0fcbb940c939791c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcbb940c939791c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:subnet/subnet-00870028a0a26b461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00870028a0a26b461",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807021613609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc_ce_load_balacing_vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:vpc/vpc-0cea82569154089e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0095d0d709afd1f60",
            "default_route_table_id": "rtb-0c2ead2915305f8aa",
            "default_security_group_id": "sg-0142ac7c1993ffa18",
            "dhcp_options_id": "dopt-0fc488c0422b8f0b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cea82569154089e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2ead2915305f8aa",
            "owner_id": "807021613609",
            "tags": {
              "Name": "nc_ce_load_balacing_vpc"
            },
            "tags_all": {
              "Name": "nc_ce_load_balacing_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group/sg-049172db89af1f1a0",
            "description": "Security group for app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049172db89af1f1a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "80.3.181.212/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_server",
            "name_prefix": "",
            "owner_id": "807021613609",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cea82569154089e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-0c74f5fbb082a245d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c74f5fbb082a245d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-0c74f5fbb082a245d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-06f856bb46e4739b0",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-06f856bb46e4739b0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-06f856bb46e4739b0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-011d589f160a8ebc7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-011d589f160a8ebc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-011d589f160a8ebc7",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-0c79e27e8c6620639",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-0c79e27e8c6620639",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-0c79e27e8c6620639",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-07e65468b9263daf4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07e65468b9263daf4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-07e65468b9263daf4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-01330de7523bf2cbc",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-01330de7523bf2cbc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-01330de7523bf2cbc",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:807021613609:security-group-rule/sgr-0954b45c0995ac962",
            "cidr_ipv4": "80.3.181.212/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0954b45c0995ac962",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-049172db89af1f1a0",
            "security_group_rule_id": "sgr-0954b45c0995ac962",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app_server",
            "module.security.data.http.myipaddr"
          ]
        }
      ]
    }
  ]
}